2005-08-21  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* input/regression/tie-dots.ly (Module): remove.

	* lily/tie.cc (get_control_points): rewrite. Put short ties in
	staff-spaces, make long ties cross staff lines. Avoid flags and dots.

	* input/regression/tie-single.ly: new file.

2005-08-21  Graham Percival  <gpermus@gmail.com>

	* ly/bagpipe.ly: fix compile problem.

2005-08-21  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/midi-item.cc (name): new method.

	* lily/staff-performer.cc (acknowledge_audio_element): use
	signature of baseclass.

	* lily/engraver-group.cc (do_announces): move recursion call out
	of while loop. 

	* lily/drum-note-performer.cc (class Drum_note_performer): use
	process_music everywhere.

	* ly/performer-init.ly: add default children everywhere.

	* lily/paper-book.cc (output): call paper-book-write-midis
	directly: always write MIDI, even if no \layout {} block. 

2005-08-19  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* VERSION (PACKAGE_NAME): release 2.7.6

	* lily/percent-repeat-engraver.cc (try_music): don't print warning
	about not being able to handle repeat.

2005-08-19  Jan Nieuwenhuizen  <janneke@gnu.org>

	* Documentation/user/examples.itely (Piano templates):
	* lily/include/performer-group.hh: Remove last traces of
	Performer_group_performer.  Fixes make web.

2005-08-19  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/user/examples.itely (Piano templates): change
	Engraver_group_engraver -> Engraver_group

	* lily/ly-module.cc (make_stand_in_procs_weak): only kludge if
	scm_stand_in_procs is not weak_any.

	* lily/volta-bracket.cc (print): don't use strcmp().

	* lily/volta-engraver.cc (process_music): use
	Text_interface::is_markup() for setting the 'text property of the
	volta bracket.

	* input/mutopia/claop.py (accents): update syntax to 2.6

	* scm/define-context-properties.scm
	(all-user-translation-properties): add countPercentRepeats.

	* Documentation/user/basic-notation.itely (Measure repeats): add