@@ -1,5 +1,10 @@
 2005-08-21  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/tie.cc: remove minimum-length
+
+	* scm/define-grob-properties.scm (all-user-grob-properties):
+	remove staffline-clearance, y-offset 
+
 	* input/regression/tie-dots.ly (Module): remove.
 
 	* lily/tie.cc (get_control_points): rewrite. Put short ties in
